--- a/08-Develop-Workflow/package.json
+++ b/08-Develop-Workflow/package.json
@@ -12,6 +12,7 @@
     "babel-preset-es2017": "^6.22.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
+    "gulp-babel-minify": "^0.1.12",
     "gulp-concat": "^2.6.1",
     "gulp-sourcemaps": "^2.4.1"
   }
