--- a/08-Develop-Workflow/package.json
+++ b/08-Develop-Workflow/package.json
@@ -10,9 +10,11 @@
   "license": "ISC",
   "devDependencies": {
     "babel-preset-es2017": "^6.22.0",
+    "babili": "0.0.12",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-babel-minify": "^0.1.12",
+    "gulp-babili": "0.0.2",
     "gulp-concat": "^2.6.1",
     "gulp-sourcemaps": "^2.4.1"
   }
